--- a/XsltService/XsltService.csproj
+++ b/XsltService/XsltService.csproj
@@ -15,6 +15,11 @@
     <PackageReference Include="NetTopologySuite.Core" Version="1.15.2" />
     <PackageReference Include="NetTopologySuite.Features" Version="1.15.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
+    <PackageReference Include="NUnit.Console" Version="3.9.0" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.9.0" />
+    <PackageReference Include="NUnit.Extension.NUnitV2Driver" Version="3.7.0" />
+    <PackageReference Include="NUnit.Runners" Version="3.9.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
   </ItemGroup>
 
 </Project>
